overview page update, responsive page not working

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,3 +8,8 @@
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
 } */
+
+.leaflet-container {
+  height: inherit;
+  width: inherit;
+}
